three vertex parent crash using simplify. #38000

Closed
opened 2013-12-30 22:17:09 +01:00 by Nahuel Belich · 10 comments

System Information
Win 7 x 64 ubuntu 13.10 x64 nvidia 560 - nvidia 460

Blender Version
Broken: 2.69 Date 2013-12-30 01:09 19103b4 (build bot win x64)
Worked: 2.68 at least

Short description of error

Turning on and off the simplify option (scene properties) crash blender if the dustcover mesh has an subdivision surface on it.
Note that the buttons, each of them, are parented to three vertex to follow the polygon face animation.

Exact steps for others to reproduce the error
1-select the dustcover (MRM_DELANTAL_HR)
2-add a subdivision surface modifier
3-turn on and off simplify until crash, it may take a few turn on and of to crash, repeat this step at least five times, also doing this wile playback the animation should crash it for sure

Blend file:
DOWNLOAD SAMPLE

NOTES: probably the problem isnt at the simplify, we also get crashes turning on and off the modifier and adding and removing a original solidify modifier that i took out to made a cleaner scene.
I remember that not long ago a commit was done on the vertex parents, i am sure that this model was done and the buttons parented before that commit, the scene was set with blender 2.67 - 68 cant remember.

thanks

**System Information** Win 7 x 64 ubuntu 13.10 x64 nvidia 560 - nvidia 460 **Blender Version** Broken: 2.69 Date 2013-12-30 01:09 19103b4 (build bot win x64) Worked: 2.68 at least **Short description of error** Turning on and off the simplify option (scene properties) crash blender if the dustcover mesh has an subdivision surface on it. Note that the buttons, each of them, are parented to three vertex to follow the polygon face animation. **Exact steps for others to reproduce the error** 1-select the dustcover (MRM_DELANTAL_HR) 2-add a subdivision surface modifier 3-turn on and off simplify until crash, it may take a few turn on and of to crash, repeat this step at least five times, also doing this wile playback the animation should crash it for sure Blend file: [DOWNLOAD SAMPLE ](http://www.pasteall.org/blend/25968) NOTES: probably the problem isnt at the simplify, we also get crashes turning on and off the modifier and adding and removing a original solidify modifier that i took out to made a cleaner scene. I remember that not long ago a commit was done on the vertex parents, i am sure that this model was done and the buttons parented before that commit, the scene was set with blender 2.67 - 68 cant remember. thanks
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich
Author

I just download the file at home, it seams to be that the sample file has some linked geometry that its at the server at the office, ill fix the sample file on Thursday.
my bad sorry

I just download the file at home, it seams to be that the sample file has some linked geometry that its at the server at the office, ill fix the sample file on Thursday. my bad sorry
Author

geometry its missing but still crashes, just with the empty reference objects parented

geometry its missing but still crashes, just with the empty reference objects parented
Author

Fixed File, but it seams that is the same with geometry or no the parent crashes the file, unfortunately i could not reproduce the error outside this mesh.
http://www.pasteall.org/blend/26006

Fixed File, but it seams that is the same with geometry or no the parent crashes the file, unfortunately i could not reproduce the error outside this mesh. http://www.pasteall.org/blend/26006
Sergey Sharybin self-assigned this 2014-01-02 21:12:29 +01:00

Caused by the threaded object update. Workaround would be to run blender from command line with -t 1 argument.

Caused by the threaded object update. Workaround would be to run blender from command line with `-t 1` argument.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Submitted fix D168

Submitted fix [D168](https://archive.blender.org/developer/D168)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Commited a fix to cc31722a41.

Thanks for the report, closing it now!

Commited a fix to cc31722a41. Thanks for the report, closing it now!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38000
No description provided.